--- a/mapimage/test2.html
+++ b/mapimage/test2.html
@@ -117,6 +117,10 @@
 			<img :src="mapPreview">
 			</p>
 		</div>
+
+		<p>
+			<a href="https://developer.here.com/documentation/map-image/dev_guide/topics/what-is.html" target="_new">HERE Map Image API Docs</a>
+		</p>
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
