--- a/mapsjs/food.html
+++ b/mapsjs/food.html
@@ -27,7 +27,7 @@
 			z-index: 5000;
 			width: 300px;
 			overflow-y: auto;
-			background-color: aqua;
+			background-color: rgb(0,255,0,0.8);
 			margin: 20px;
 			padding: 10px;
 			height: 400px;
