moar awesome work

--- a/mapsjs/routedemo/index.html
+++ b/mapsjs/routedemo/index.html
@@ -18,12 +18,16 @@
 		</p>
 
 		<p>
-		todo, add waypoint, will have a button to remove.
-		</p>
-		
-		<p>
 		<label for="end">End Location:</label>
 		<input type="text" id="end">
+		</p>
+
+		<h3>Waypoints</h3>
+		<p id="waypointList">
+		</p>
+		<p>
+		<input type="text" id="newWaypoint">
+		<button id="addWaypointButton">Add Waypoint</button>
 		</p>
 
 		<button id="showRouteButton">Show Route</button>
