--- a/mapsjs/routedemo/index.html
+++ b/mapsjs/routedemo/index.html
@@ -6,6 +6,7 @@
 	<script src="https://js.api.here.com/v3/3.1/mapsjs-ui.js" type="text/javascript" charset="utf-8"></script>
 	<link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />
 	<link href="app.css" rel="stylesheet">
+	<title>Route Map Demo</title>
 </head>
 
 <body>
