--- a/mapsjs/click.html
+++ b/mapsjs/click.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Test XYZ</title>
+		<title>Click for long/lat and address</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="initial-scale=1.0, width=device-width" />
 		<script src="https://js.api.here.com/v3/3.1/mapsjs-core.js" type="text/javascript" charset="utf-8"></script>
