--- a/harpgl/music/test_music.html
+++ b/harpgl/music/test_music.html
@@ -29,7 +29,7 @@
             }
         </style>
         <script src="https://unpkg.com/three/build/three.min.js"></script>
-        <script src="https://unpkg.com/@here/harp.gl/dist/harp.js"></script>
+        <script src="harp.js"></script>
     </head>
     <body>
         <div id="infoBox">
