--- a/mapsjs/multilocations/index.html
+++ b/mapsjs/multilocations/index.html
@@ -47,7 +47,8 @@
 		</p>
 
 		<p id="credit">
-		Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
+		Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from
+		<a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
 		</p>
 
 	</div>
