--- a/apps/dynisoline/index.html
+++ b/apps/dynisoline/index.html
@@ -45,7 +45,8 @@
 		</datalist>
 
 		<output for="range" id="label">0</output><br/>
-		todo: drop down for time vs distance, currently its dinstance in KM
+		<input type="radio" name="rangetype" value="distance" checked> Distance (km)<br/>
+		<input type="radio" name="rangetype" value="time"> Time (minutes)<br/>
 		</p>
 		</div>
 
