--- a/apps/heatlhgrade/index.html
+++ b/apps/heatlhgrade/index.html
@@ -13,10 +13,12 @@
 <div class="container">
 	<div id="panel">
 		<h2>Health Grade</h2>
-		<p>
-		Text here to be written.
+		<p id="intro">
+		Click a position on the map (within the United States) to get information related to the relative amount of 
+		health related services near that location as well as the number of confirmed COVID cases and deaths.
 		</p>
-		
+		<div id="results">
+		</div>
 	</div>
 
 	<div id="map"></div>
