--- a/apps/healthgrade/index.html
+++ b/apps/healthgrade/index.html
@@ -6,6 +6,7 @@
 	<script src="https://js.api.here.com/v3/3.1/mapsjs-ui.js" type="text/javascript" charset="utf-8"></script>
 	<link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />
 	<link rel="stylesheet" type="text/css" href="app.css" />
+	<title>Health Grade</title>
 </head>
 
 <body>
